# innpulsa-analisis-exploracion

./: .gitignore  README.md  pyproject.toml
analysis/01_iv/: data_processing.R  panel_analysis.Rmd  panel_analysis.html
app/: app.py  constants.py  data_loader.py  map_components.py  plots.py  zasca_maps.py
data/02_processed/: zasca_total.csv
data/02_processed/geolocation/: data_with_coords.csv  rues_addresses.csv  rues_coordinates.csv  zasca_addresses.csv  zasca_coordinates.csv
data/03_analysis/geolocation/: data_with_coords.csv
data/processed/: zasca_total.csv
data/processed/geolocation/: rues_addresses.csv  rues_coordinates.csv  rues_coordinates_nominatim.csv  rues_total_merged.csv  zasca_addresses.csv  zasca_coordinates.csv  zasca_coordinates_nominatim.csv
scripts/: create_rues_clean_data.py  create_zasca_clean_data.py  merge_rues_zasca.py  process_rues.py  process_zasca.py
scripts/descriptive/: collect_data.py  create_plot_data.py  create_plots.py
scripts/descriptive/data_processing/: age_distribution.py  business_age.py  department_representation.py  employment.py  formality.py  gender_distribution.py  household_care.py  household_head.py  reasons.py  sales.py  sisben_groups.py  utils.py
scripts/descriptive/plots/: business_age.py  department_representation.py  employment.py  formality.py  household_care.py  marimekko_chart.py  mirror_histogram.py  reasons.py  sales.py  sisben_groups.py
scripts/geolocation/: compare_coordinates.py  geocode_addresses.py  merge_rues_zasca.py  merge_rues_zasca_for_analysis.py  process_zasca_addresses.py
scripts/geolocation/rues/: process_addresses.py  process_rues_addresses.py
scripts/geolocation/zasca/: compare_coordinates.py  geocode_addresses.py  process_addresses.py
src/innpulsa/: __init__.py  logging.py  rate_limiter.py  settings.py
src/innpulsa/geolocation/: _prompts.py  address_processor.py  geocoding.py  llm.py  processing.py  prompts.py
src/innpulsa/loaders/: __init__.py  generic.py  rues.py  zasca.py
src/innpulsa/processing/: __init__.py  emicron.py  (+2 more)
(+24 files in other folders)
