[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "innpulsa"
version = "0.1.0"
description = "Innpulsa Analysis Project"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyreadstat",
    "google-genai",
    "aiohttp",
    "tqdm",
    "geopy",
    "pydeck",
    "streamlit",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["innpulsa*"] 