[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "innpulsa"
version = "0.1.0"
description = "Innpulsa Analysis Project"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "pyreadstat",
    "google-genai",
    "aiohttp",
    "tqdm",
    "geopy",
    "pydeck",
    "streamlit",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["innpulsa*"]

[tool.basedpyright]
typeCheckingMode = "basic" 
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv"] 
reportImplicitStringConcatenation = false 
reportAttributeAccessIssue = false
reportCallIssue = false


[tool.ruff]
target-version = "py313"
line-length = 120
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",    # flake8-annotations (missing type annotations)
    "D10",    # pydocstyle (missing docstrings)
    "D203",   # pydocstyle (one-blank-line-before-class)
    "D205",   # pydocstyle (1 blank line required between summary line and description)
    "D212",   # pydocstyle (multi-line-summary-first-line)
    "D213",   # pydocstyle (multi-line-summary-second-line)
    "D415",   # pydocstyle (first line should end with a period)
    "COM812", # trailing comma missing
    "ISC001", # implicit string concatenation
    "CPY001", # missing copyright notice at the top of the file
    "I001",   # unsorted-imports
]

[tool.ruff.lint.isort]
known-first-party = ["innpulsa"]

[tool.ruff.format]
quote-style = "double"